--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -4018,6 +4018,7 @@ margin-right: -2px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0);
     box-shadow: inset 0 1px 1px rgba(0,0,0,0);
     outline: none;
+    margin-bottom: 40px;
 }
 .contact-form-3 form button, 
 .contact-form-3 form button:hover, 
@@ -8653,6 +8654,8 @@ font-family: 'Lora', serif;
     position: absolute;
     bottom: 10px;
 }
-
-
-
+.section-header{
+    color: #43b4ae;
+    font-weight: 600;
+    margin-left: 10px;
+}
