--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
+<%= render "layouts/header" %>
 <!-- START REVOLUTION SLIDER 5.0 -->
 <div class="rev_slider_wrapper">
     <div id="slider1" class="rev_slider" data-version="5.0">
@@ -720,3 +721,5 @@
         </div>
     </div>
 </div>
+
+<%= render "layouts/footer" %>
