--- a/app/views/static_pages/coming_soon.html.erb
+++ b/app/views/static_pages/coming_soon.html.erb
@@ -7,7 +7,7 @@
             <div class="col-md-12 text-center">
                 <div class="about-head-content">
                     <h2>We Are Coming Soon</h2>
-                    <p>Stay ready to make wealth!</p>
+                    <p>On your way to wealth!</p>
                 </div>
             </div>
         </div>
