--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -341,15 +341,14 @@
                     </div>
                     <div class="pricing-table-inner-content">
                         <div class="pricing-table-title">
-                            <p>Register 2 persons with your referal link</p>
+                            <p>Register with &#8358;3,0500, register 2 persons with your referal link.</p>
                         </div>
                         <div class="pricing-table-list">
                             <ul>
+                                <li><span>2x2</span> Matrix</li>
                                 <li><span>&#8358;2000</span> * 2 Direct Referral bonus</li>
-                                <li><span>&#8358;1K</span> * 4 From Downline1 referal each</li>
-                                <li><span>&#8358;500</span> * 8 From Downline2 referal each</li>
-                                <li><span>&#8358;12,000</span> Profit</li>
-                                <li>E-Wallet</li>
+                                <li><span>&#8358;1K</span> * 4 From Downline referal each</li>
+                                <li><span>&#8358;8,000</span> Profit</li>
                             </ul>
                             <div class="all-link pricinig-bottom-btn text-center">
                                 <a href="#">Register Now!<i class="fa fa-long-arrow-right"></i></a>
@@ -372,14 +371,14 @@
                     </div>
                     <div class="pricing-table-inner-content">
                         <div class="pricing-table-title">
-                            <p>Step out from Feeder stage once downline completes 14</p>
+                            <p>Step out from Feeder stage once downline completes 7</p>
                         </div>
                         <div class="pricing-table-list">
                             <ul>
-                                <li><span>&#8358;10,000</span> Step Out Bonus</li>
-                                <li><span>$5</span> * 14 From all downline that completes feeder stage</li>
+                                <li><span>2x3 </span> Matrix</li>
+                                <li><span>$5</span> Step-In Bonus * 14</li>
                                 <li><span>1 Blender</span> Item Bonus</li>
-                                <li><span>&#8358;10,000 + $70</span> Profit</li>
+                                <li><span>&#8358;10,000</span> Step Out Bonus</li>
                             </ul>
                             <div class="all-link pricinig-bottom-btn text-center">
                                 <a href="#">Register Now!<i class="fa fa-long-arrow-right"></i></a>
@@ -406,10 +405,10 @@
                         </div>
                         <div class="pricing-table-list">
                             <ul>
+                                <li><span>2x3 </span>Matrix</li>
+                                <li><span>$20</span> Step-In Bonus * 14</li>
+                                <li><span>25KG </span>of Rice</li>
                                 <li><span>&#8358;100,000</span> Step Out Bonus</li>
-                                <li><span>$20</span> * 14 From all downline that completes Ruby stage 1</li>
-                                <li><span>25KG of Rice</span> : Incentive</li>
-                                <li><span>&#8358;100,000 + $280</span> Profit</li>
                             </ul>
                             <div class="all-link pricinig-bottom-btn text-center">
                                 <a href="#">Register Now!<i class="fa fa-long-arrow-right"></i></a>
@@ -436,10 +435,10 @@
                         </div>
                         <div class="pricing-table-list">
                             <ul>
+                                <li><span>2x3</span> Matrix</li>
+                                <li><span>$120</span> Step-In Bonus * 14</li>
+                                <li><span>$5000</span> Empowerment</li>
                                 <li><span>&#8358;500,000</span> Step Out Bonus</li>
-                                <li><span>$120</span> * 14 From all downline that completes Ruby stage 2</li>
-                                <li><span>$5000</span> : Incentive</li>
-                                <li><span>&#8358;500,000 + $6,680</span> Profit</li>
                             </ul>
                             <div class="all-link pricinig-bottom-btn text-center">
                                 <a href="#">Register Now!<i class="fa fa-long-arrow-right"></i></a>
@@ -466,10 +465,10 @@
                         </div>
                         <div class="pricing-table-list">
                             <ul>
-                                <li><span>$25,000</span> Step Out Bonus</li>
-                                <li><span>$200</span> * 14 From all downline that completes Ruby stage 2</li>
-                                <li><span>Car worth 4,000,000</span> : Incentive</li>
-                                <li><span>$27,800</span> Profit</li>
+                                <li><span>2x3</span> Matrix</li>
+                                <li><span>$200</span> Step In Bonus * 14</li>
+                                <li><span>4,000,000</span> Worth Car</li>
+                                <li><span>&#8358;500,000</span> Step Out Bonus</li>
                             </ul>
                             <div class="all-link pricinig-bottom-btn text-center">
                                 <a href="#">Register Now!<i class="fa fa-long-arrow-right"></i></a>
