--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -27,7 +27,7 @@
                             <i class="icon-layers float-right text-muted"></i>
                             <h6 class="text-muted text-uppercase m-b-20">E - Wallet</h6>
                             <h2 class="m-b-20">$<span data-plugin="counterup">1,587</span></h2>
-                            <span class="label label-success"> Credit E-wallet </span> 
+                            <span class="label label-success"> Registration E-wallet </span> 
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-6 col-xl-3">
@@ -35,7 +35,7 @@
                             <i class="icon-paypal float-right text-muted"></i>
                             <h6 class="text-muted text-uppercase m-b-20">Revenue</h6>
                             <h2 class="m-b-20">$<span data-plugin="counterup">46,782</span></h2>
-                            <span class="label label-danger"> Earned Bonuses</span>
+                            <span class="label label-danger"> Bonus E-Wallet</span>
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-6 col-xl-3">
@@ -78,46 +78,39 @@
 
                                 <tbody>
                                     <tr>
-                                        <td>Tiger Nixon</td>
-                                        <td>System Architect</td>
-                                        <td>Edinburgh</td>
+                                        <td>Prisca Ekezie</td>
+                                        <td>Feeder Stage</td>
+                                        <td>Lagos</td>
                                         <td>61</td>
-                                        <td>2011/04/25</td>
+                                        <td>12/10/2017</td>
                                     </tr>
                                     <tr>
-                                        <td>Garrett Winters</td>
-                                        <td>Accountant</td>
-                                        <td>Tokyo</td>
-                                        <td>63</td>
-                                        <td>2011/07/25</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Ashton Cox</td>
-                                        <td>Junior Technical Author</td>
-                                        <td>San Francisco</td>
-                                        <td>66</td>
-                                        <td>2009/01/12</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Cedric Kelly</td>
-                                        <td>Senior Javascript Developer</td>
-                                        <td>Edinburgh</td>
-                                        <td>22</td>
-                                        <td>2012/03/29</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Airi Satou</td>
-                                        <td>Accountant</td>
-                                        <td>Tokyo</td>
-                                        <td>33</td>
-                                        <td>2008/11/28</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Brielle Williamson</td>
-                                        <td>Integration Specialist</td>
-                                        <td>New York</td>
+                                        <td>Precious Ekezie</td>
+                                        <td>Feeder Stage</td>
+                                        <td>Benin</td>
                                         <td>61</td>
-                                        <td>2012/12/02</td>
+                                        <td>12/10/2017</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Akare Nwaograya</td>
+                                        <td>Feeder Stage</td>
+                                        <td>Lagos</td>
+                                        <td>74</td>
+                                        <td>12/10/2017</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Nene Mba</td>
+                                        <td>Feeder Stage</td>
+                                        <td>Lagos</td>
+                                        <td>34</td>
+                                        <td>12/10/2017</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Chibuike Okoli</td>
+                                        <td>Feeder Stage</td>
+                                        <td>Lagos</td>
+                                        <td>79</td>
+                                        <td>12/10/2017</td>
                                     </tr>
                                 </tbody>
                             </table>
