--- a/app/views/layouts/_leftbar.html.erb
+++ b/app/views/layouts/_leftbar.html.erb
@@ -5,7 +5,7 @@
         <div id="sidebar-menu">
             <ul>
                 <li class="has_sub">
-                    <a href="<%= dashboard_index_path %>" class="waves-effect"><span class="label label-pill label-primary float-right">1</span><i class="zmdi zmdi-view-dashboard"></i><span> My Dashboard </span> </a>
+                    <a href="<%= dashboard_path %>" class="waves-effect"><span class="label label-pill label-primary float-right">1</span><i class="zmdi zmdi-view-dashboard"></i><span> My Dashboard </span> </a>
                 </li>
                 <li class="has_sub">
                     <a href="javascript:void(0);" class="waves-effect"><i class="zmdi zmdi-chart"></i> <span> My Genealogy </span> <span class="menu-arrow"></span></a>
