--- a/app/views/dashboard/deposit_funds.html.erb
+++ b/app/views/dashboard/deposit_funds.html.erb
@@ -23,7 +23,7 @@
                         <div class="row">
                             <div class="col-xl-6" style="margin: 0px auto">
                                 <div class="card m-b-20 card-body">
-                                    <h3 class="card-title" style="color: black">E-wallet Transfer</h3>
+                                    <h3 class="card-title" style="color: black">Encash E-Wallet</h3>
                                     <p class="card-text" style="margin-top: 0; font-size: 80%">You are about deposit funds into your e-wallet account <span class="label label-warning">(3% charge commission charge)</span></p>
                                     <div class="divider"></div>
                                     <form>
